--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
-ALURAFLIX
+<header>ALURAFLIX</header>
 
 
-A Era Do Gelo 3 - Rudy Vs. T-Rex Dublado
-#eradogelo
+<h1>A Era Do Gelo 3 - Rudy Vs. T-Rex Dublado</h1>
+<p>#eradogelo</p>
+
+
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/YhI_adZsync?si=8xlo7u-Arbs_z7EH" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
